@@ -1,3 +1,11 @@
+1999-11-04  Jonathan Blandford  <jrb@redhat.com>
+
+	* src/gdk-pixbuf-loader.c (gdk_pixbuf_loader_update): handle the
+	actual update.
+	* src/io-png.c (image_begin_load): add a update_func callback.
+	* src/io-gif.c (image_begin_load): add a update_func callback.
+	* src/io-tiff.c (image_begin_load): add a update_func callback.
+
 1999-11-04  Federico Mena Quintero  <federico@redhat.com>
 
 	* doc/tmpl/gdk-pixbuf.sgml: Populated.
